Fix logo width bug on mobile
No idea why this happened, and why it only rarely, under weird reloading
circumstances would it show up in Chrome's mobile mode. But this seems to fix it
(according to michael's phone).

--- a/pelican-theme/static/css/flex.css
+++ b/pelican-theme/static/css/flex.css
@@ -215,12 +215,16 @@ footer span.break {
 }
 
 .index-logos img {
-  vertical-align: top;
+  height: auto;
   width: 100%;
 }
 @media screen and (min-width: 500px) {
-  .index-logos img:first-of-type { width: 66% }
-  .index-logos img:last-of-type { width: 32% }
+  .index-logos {
+    display: flex;
+    justify-content: space-between;
+  }
+  .index-logos .ovgu { flex: 5.07; }
+  .index-logos .cbbs { flex: 2.61; }
 }
 
 .sponsor-logos {
